Fix the display of "add to bookmarks" button on small screens.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,14 +109,6 @@ body {
   font-size: 10pt;
 }
 
-.telephone-button {
-  display: inline-block;
-}
-
 .underlined-text {
   text-decoration: underline;
-}
-
-.view-number {
-  display: inline-block;
 }
